--- a/dashboard.html
+++ b/dashboard.html
@@ -8,6 +8,34 @@
 </head>
 <body>
     <div class="dashboard-container">
+        <!-- Hoverable Side Navigation -->
+        <div class="side-nav-trigger"></div>
+        <div class="side-nav" id="sideNav">
+            <div class="nav-content">
+                <div class="nav-header">
+                    <button id="sideNavLogout" class="nav-logout-button">
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
+                            <polyline points="16,17 21,12 16,7"></polyline>
+                            <line x1="21" y1="12" x2="9" y2="12"></line>
+                        </svg>
+                        Logout
+                    </button>
+                </div>
+                <div class="nav-body">
+                    <div class="nav-section">
+                        <h3 class="nav-section-title">Projects</h3>
+                        <div id="projectsList" class="projects-list">
+                            <div class="nav-placeholder" id="projectsPlaceholder">
+                                <div class="loading-spinner small"></div>
+                                <span>Loading projects...</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
         <div class="hero-section" id="heroSection">
             <div class="hero-content">
                 <h1 class="hero-title">
@@ -71,18 +99,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-        
-        <!-- User menu (simple for now) -->
-        <div class="user-menu">
-            <button id="logoutButton" class="logout-button">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
-                    <polyline points="16,17 21,12 16,7"></polyline>
-                    <line x1="21" y1="12" x2="9" y2="12"></line>
-                </svg>
-                Logout
-            </button>
         </div>
     </div>
 
