--- a/dashboard.html
+++ b/dashboard.html
@@ -24,7 +24,16 @@
                 </div>
                 <div class="nav-body">
                     <div class="nav-section">
-                        <h3 class="nav-section-title">Projects</h3>
+                        <div class="nav-section-header">
+                            <h3 class="nav-section-title">Shopify Apps</h3>
+                            <button id="createNewAppBtn" class="create-app-btn" title="Create New Shopify App">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <line x1="12" y1="5" x2="12" y2="19"></line>
+                                    <line x1="5" y1="12" x2="19" y2="12"></line>
+                                </svg>
+                                New App
+                            </button>
+                        </div>
                         <div id="projectsList" class="projects-list">
                             <div class="nav-placeholder" id="projectsPlaceholder">
                                 <div class="loading-spinner small"></div>
